syntax = "proto3";

package jettisonpb;

option go_package = "../jettisonpb";

message KeyValue {
  string key = 1;
  string value = 2;
}

message WrappedError {
  reserved 2;

  string message = 1;

  string binary = 5;
  repeated string stack_trace = 6;
  string code = 7;
  string source = 9;
  repeated KeyValue key_values = 8;

  repeated WrappedError joined_errors = 3;
  WrappedError wrapped_error = 4;
}
